<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.sergiom.lolabeer.MainActivity">
    <item
        android:id="@+id/menu_fav"
        android:icon="@drawable/ic_menu_icon"
        android:title=""
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_favourite"
                android:orderInCategory="100"
                android:title="@string/action_settings"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>